--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2008-08-13 zzz
+    * i2psnark: Fix OOM vulnerability by checking incoming message length
+      (thanks devzero!)
+
 2008-08-04 zzz
     * Floodfill Peer Selector:
       - Avoid peers whose netdb is old, or have a recent failed store,
