Fix potential XSS holes
Monotone-Parent: 02bfe838fd91b83debcd064d5af68331ae7402bc
Monotone-Revision: b76173899863cf464cc1205344e3bdfbedfcb695

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-04T00:27:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-12-04 zzz
+    * Console: Close up some possible XSS (thanks Pragmatk)
+    * i2psnark: Config cleanup, more HTML transitional fixes
+    * readme*.html: Point to translated pages on www.i2p2.i2p
+
 2009-11-29 zzz
     * config.jsp: Comment out unused stuff better
     * profiles.jsp: Hide non-ff from ff table
