* netdb.jsp: Fix bug caused by XSS fix     * Translations: drop ru until after release
Monotone-Parent: d6e56e330e7f4b9cafc5b20728404241408c5ae5
Monotone-Revision: ef1010c37be3810429094c6549a5eef2060c2c63

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-06T21:42:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-12-06 zzz
+    * netdb.jsp: Fix bug caused by XSS fix
+    * Translations: drop ru until after release
+
 2009-12-05 zzz
     * Build: Fix poupdate dependency
     * Console: Add Russian option
